--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,81 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap");
 
-html{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
 /* #f1f3f5*/
-body{
-    font-family: "Radio Canada", sans-serif;
-    font-size: 1.6rem;
-    background-color: #000000;
-    color:  #e6e6e6;
-    max-width: 100rem;
-    margin: 2.4rem auto;
+body {
+  font-family: "Radio Canada", sans-serif;
+  font-size: 1.6rem;
+  background-color: #000000;
+  color: #e6e6e6;
+  max-width: 100rem;
+  margin: 2.4rem auto;
 }
-h2{
-    font-size: 1.8rem;
+h2 {
+  font-size: 1.8rem;
 }
-button{
-    font-family: inherit;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+button {
+  font-family: inherit;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
-input, select{
-    font-family: inherit;
-    background-color: transparent;
-    border: .2px solid #b3b3b3;
-    color: inherit;
-    border-radius: 4px;
-    padding: 1rem;
+input,
+select {
+  font-family: inherit;
+  background-color: transparent;
+  border: 0.2px solid #b3b3b3;
+  color: inherit;
+  border-radius: 4px;
+  padding: 1rem;
 }
-option{
-    background-color: #b3b3b3;
-    color: #000;
-    padding: .4rem;
+option {
+  background-color: #b3b3b3;
+  color: #000;
+  padding: 0.4rem;
 }
-.header{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 1.2rem;
-    margin: 4.4rem 2rem;
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 1.2rem;
+  margin: 4.4rem 2rem;
 }
-.header-search-box{
-    display: flex;
-    gap: .4rem;
-    align-items: center;
+.header-search-box {
+  display: flex;
+  gap: 0.4rem;
+  align-items: center;
 }
-.header .btn--primary{
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.header .btn--primary {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
-.header-filters-box{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+.header-filters-box {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
-.search-input{
-    width: 40rem;
+.search-input {
+  width: 40rem;
 }
-.contacts{
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-    justify-items: center;
-    row-gap: 1.4rem;
-    column-gap: 2.4rem;
-    margin: 0 2rem;
+.contacts {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+  row-gap: 1.4rem;
+  column-gap: 2.4rem;
+  margin: 0 2rem;
 }
 .contact {
-    display: flex;
-    gap: .8rem;
-    border-radius: 8px;
-    padding: .8rem;
-    border: .2px solid #b3b3b32d;
-    width: 100%;
+  display: flex;
+  gap: 0.8rem;
+  border-radius: 8px;
+  padding: 0.8rem;
+  border: 0.2px solid #b3b3b32d;
+  width: 100%;
 }
 
 /* .contact-img{
@@ -84,78 +85,97 @@ option{
     border-radius: 50%;
 } */
 
-.contact-cover{
-    font-family: "Leckerli One", cursive;
-    color: #000;
-    background-color: #e6e6e6d5;
-    height: 3.4rem;
-    width: 3.4rem;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.contact-cover {
+  font-family: "Leckerli One", cursive;
+  color: #000;
+  background-color: #e6e6e6d5;
+  height: 3.4rem;
+  width: 3.4rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.contact-name{
-    font-weight: 700;
+.contact-name {
+  font-weight: 700;
 }
-.contact-number{
-    font-size: 1.2rem;
-    color: #b3b3b3;
+.contact-number {
+  font-size: 1.2rem;
+  color: #b3b3b3;
 }
-.contact-info{
-    display: flex;
-    flex-direction: column;
-    gap: .2rem;
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
 }
-.contact-header{
-    display: flex;
-    justify-content: space-between;
+.selected-contact-info {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  margin-bottom: 1.6rem;
 }
-.contact-header span{
-    display: block;
+.selected-contact-info span {
+  font-weight: 700;
 }
-.contact-header .icon{
-    margin-top: .4rem;
+.contact-header {
+  display: flex;
+  justify-content: space-between;
 }
-.contact-btns{
-    margin-top: 1.4rem;
-    gap: .6rem;
-    display: flex;
-    align-items: center;
+.contact-header span {
+  display: block;
 }
-.contact-form{
-    display: flex;
-    flex-direction: column;
-    gap: 1.4rem;
-    margin-bottom: 2.4rem;
+.contact-header .icon {
+  margin-top: 0.4rem;
 }
-.modal{
-    top: 50%;
-    transform: translateY(-80%);
-    background-color: #00000018;
-    backdrop-filter: blur(10px);
-    color: #f1f3f5;
-    border: .2px solid #b3b3b32d;
-    border-radius: 12px;
-    z-index: 2;
+.contact-btns {
+  margin-top: 1.4rem;
+  gap: 0.6rem;
+  display: flex;
+  align-items: center;
 }
-.btn--primary{
-    background-color: #f1f3f5;
-    color: #000;
-    border-radius: 8px;
-    padding: .4rem 2.2rem;
-    transition: all 300ms ease-in;
-    border: .4px solid #f1f3f5;
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+  margin-bottom: 2.4rem;
 }
-.edit-btn:hover,.edit-btn:active{
-    background-color: transparent;
-    color: #f1f3f5;
+.modal {
+  top: 50%;
+  transform: translateY(-80%);
+  background-color: #00000018;
+  color: #f1f3f5;
+  border: 0.2px solid #b3b3b32d;
+  border-radius: 12px;
+  z-index: 2;
 }
-.btn{
-    color: inherit;
+.btn--primary {
+  background-color: #f1f3f5;
+  color: #000;
+  border-radius: 8px;
+  padding: 0.4rem 2.2rem;
+  transition: all 300ms ease-in;
+  border: 0.4px solid #f1f3f5;
 }
-.icon{
-    height: 1.9rem;
-    width: 1.9rem;
-    cursor: pointer;
+.edit-btn:hover,
+.edit-btn:active {
+  background-color: transparent;
+  color: #f1f3f5;
+}
+.btn {
+  color: inherit;
+}
+.icon {
+  height: 1.9rem;
+  width: 1.9rem;
+  cursor: pointer;
+}
+.backdrop {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4px);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
