--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11,7 +11,7 @@ body {
   background-color: #000000;
   color: #e6e6e6;
   max-width: 100rem;
-  margin: 2.4rem auto;
+  margin: 2.4rem 4rem;
 }
 h2 {
   font-size: 1.8rem;
@@ -68,7 +68,6 @@ option {
   justify-items: center;
   row-gap: 1.4rem;
   column-gap: 2.4rem;
-  margin: 0 2rem;
 }
 .contact {
   display: flex;
