--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap");
 
 html {
-  font-size: 62.5%;
+  font-size: 60.5%;
 }
 /* #f1f3f5*/
 body {
@@ -41,7 +41,7 @@ option {
   flex-direction: column;
   align-items: start;
   gap: 1.2rem;
-  margin: 4.4rem 2rem;
+  margin: 4.4rem 0;
 }
 .header-search-box {
   display: flex;
@@ -64,10 +64,11 @@ option {
 }
 .contacts {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  justify-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  margin: auto;
   row-gap: 1.4rem;
   column-gap: 2.4rem;
+  width: 100%;
 }
 .contact {
   display: flex;
@@ -177,4 +178,23 @@ option {
   width: 100%;
   height: 100%;
   z-index: 2;
+}
+
+/* QUERIES */
+@media (max-width: 32rem) {
+  html{
+    font-size: 50%;
+  }
+  .header-search-box {
+    flex-direction: column-reverse;
+    align-items: start;
+  }
+  .btn--primary{
+    margin-bottom: 1.4rem;
+  }
+}
+@media (max-width: 28rem) {
+  .search-input {
+    width: 80vw;
+}
 }
